# codegreen

./: .gitignore  .gitignore copy  .gitmodules  .pypirc  AUTHENTICATION.md  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Dockerfile  INSTALL.md  INSTALLATION.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  USAGE.md  VISUALIZATION_GUIDE.md  build.sh  build_wheels.py  codegreen_cli.py  energy_data.db  install.sh  issues.md  perf_results.txt  pyproject.toml  requirements.txt  setup.py  setup_publishing.py  timeout_energy_data.json
.github/workflows/: build-and-publish.yml  docs.yml
codegreen/: __init__.py  cli.py  main.py
codegreen/core/: __init__.py  ast_processor.py  config.py  engine.py  language_configs.py  language_engine.py
codegreen/languages/: __init__.py  base.py  integration.py  manager.py  registry.py
codegreen/utils/: __init__.py  binary.py  metadata.py
config/: codegreen.conf  codegreen.json
core/: CMakeLists.txt  Cargo.toml  README.md
core/include/: config.hpp  energy_code_mapper.hpp  measurement.hpp  measurement_engine.hpp  pmt_manager.hpp  sensor_validator.hpp
core/include/adapters/: language_adapter.hpp
core/include/nemb/: codegreen_energy.hpp
core/include/nemb/drivers/: amd_gpu_provider.hpp  intel_rapl_provider.hpp
core/include/nemb/utils/: non_blocking_file_reader.hpp  precision_timer.hpp
core/include/plugin/: hardware_plugin.hpp
core/src/: config.cpp  energy_code_mapper.cpp  energy_storage.cpp  lib.rs  measurement_engine.cpp  measurement_session.cpp  pmt_manager.cpp  sensor_validator.cpp
core/src/adapters/: arm_pmu.rs  intel_rapl.cpp  intel_rapl.rs  mod.rs  nvidia_gpu.cpp  nvidia_gpu.rs  pmt_adapter.cpp  pmt_adapter.hpp
core/src/measurement/: mod.rs
core/src/nemb/: README.md  accuracy_validator.cpp  codegreen_energy.cpp  config_loader.cpp
core/src/nemb/core/: energy_provider.cpp  measurement_coordinator.cpp
core/src/nemb/drivers/: amd_gpu_provider.cpp  intel_rapl_provider.cpp  nvidia_gpu_provider.cpp
core/src/nemb/utils/: non_blocking_file_reader.cpp
core/src/plugin/: mod.rs  plugin_registry.cpp
core/tests/: integration_test.rs  mock_test.rs  nemb_validation_test.cpp  unit_test.rs
docker/grafana/: docker-compose.yml
docker/prometheus/: prometheus.yml
docs/: ARCHITECTURE_CLEANUP.md  DOCUMENTATION.md  README.md  USAGE.md  architecture-proposal-v2.md  configuration-guide.md  migration-v1-to-v2.md
docs/architecture/: checkpointing-architecture.md  nemb-vs-v1.md
docs/demo/: DEMO_README.md  create_demo_with_audio.sh  demo.tape  generate_logos.py  print_banner.sh  test.tape
docs/design/: architecture.md  codegreen_arch.mmd
docs/guides/: cpp_guide.md  quickstart.md
docs/publish/: PUBLISHING.md  build_release.sh
docs/usecase/: ideas.md
docs/website/: dev-server.sh  gen_ref_pages.py  mkdocs.yml
dummy_dataset/ahmetozlu_vehicle_counting_tensorflow/: git_metadata.json
dummy_patched/quickstart/: advanced_method-level.py  beginner_method-level.py
examples/: c_sample.c  complex_cpp_test.cpp  complex_python_test_instrumented.py  cpp_sample.cpp  test_energy_python.py
grafana/: README.md
install/: README.md  docker-setup.sh  hpc-module.lua  install.sh  setup_permissions.sh
monitoring/: exporter.pid  grafana.container  prometheus.container  prometheus_exporter.py
reports_enhanced/: energy_report.html  energy_report.json
scripts/: build.sh  commands.sh  commands.txt  create_instrumented_examples.py  generate_energy_report.py  start_monitoring.sh  stop_monitoring.sh
src/: __init__.py  main.cpp
src/analyzer/: cleanup_project.sh  energy_dashboard.py  setup_monitoring_stack.py  start-services.sh  view_reports.py
src/cli/: __init__.py  cli.py  entrypoint.py
src/ide/: README.md
src/instrumentation/: CMakeLists.txt  ast_processor.py  bridge_analyze.py  bridge_instrument.py  codegreen_runtime.py  engine.py  language_configs.py  language_engine.py
src/instrumentation/configs/: SCHEMA.md  TEMPLATE.json  c.json  cpp.json  java.json  javascript.json  python.json
src/instrumentation/language_runtimes/: README.md
src/instrumentation/language_runtimes/c/: codegreen_runtime.h
src/instrumentation/language_runtimes/python/: codegreen_runtime.py
src/measurement/: CMakeLists.txt  main.cpp
src/measurement/include/: config.hpp  measurement_engine.hpp
src/measurement/include/adapters/: python_bridge_adapter.hpp
src/measurement/include/nemb/: accuracy_validator.hpp  codegreen_energy.hpp
src/measurement/include/nemb/core/: energy_provider.hpp  measurement_coordinator.hpp
src/measurement/include/nemb/drivers/: amd_rapl_provider.hpp  arm_energy_provider.hpp  intel_rapl_provider.hpp
src/measurement/src/: config.cpp  energy_code_mapper.cpp  energy_monitor.cpp  energy_storage.cpp  measurement_engine.cpp
src/measurement/src/adapters/: arm_pmu.cpp  python_bridge_adapter.cpp
src/measurement/src/nemb/: codegreen_energy.cpp
src/measurement/src/nemb/core/: energy_provider.cpp  measurement_coordinator.cpp
src/measurement/src/nemb/drivers/: amd_gpu_provider.cpp  amd_rapl_provider.cpp  arm_energy_provider.cpp  intel_rapl_provider.cpp  nvidia_gpu_provider.cpp
src/measurement/src/nemb/hal/: counter_manager.cpp
src/measurement/src/nemb/utils/: precision_timer.cpp
src/measurement/tests/: nemb_validation_test.cpp  rapl_provider_test.cpp
src/optimizer/: CMakeLists.txt  README.md
src/optimizer/include/: analysis.hpp  optimizer.hpp  suggestions.hpp
src/optimizer/src/: optimizer.cpp
src/utils/: platform.py
test/: test_main.py
tests/: ComplexJavaTest.java  JavaSample.java  complex_c_test_instrumented_debug.c  complex_python_cases.py  complex_python_test.py  debug_cpp_ast_details.py  debug_cpp_ast_processor.py  debug_cpp_queries.py  python_sample.py  repro_python_instrumentation.py  sample_c.c  sample_python.py  simple_cpp.cpp  simple_test.py  simple_usage.cpp  test_all_languages.py  test_cpp_ast.py  test_deduplication.py  test_python_async_ast.py  test_treesitter_queries.py
tests/instrumentation_validation/: c_macros.c  c_nested.c  c_structs.c  cpp_classes.cpp  cpp_lambdas.cpp  cpp_templates.cpp  (+7 more)
(+158 files in other folders)
