[workspace]
members = [
    "core",
    "packages/instrumentation",
    "packages/hardware-plugins",
    "packages/language-adapters",
    "packages/ide",
    "packages/optimizer",
    "packages/visualization"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Codegreen Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"