[workspace]
members = [
    "core",
    "packages/*"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Codegreen Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
chrono = "0.4"
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"