[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "codegreen"
authors = [{name = "Saurabhsingh Rajput", email = "saurabh@dal.ca"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
dependencies = [
"typer>=0.9",
"GitPython",
"rich",
"tensorflow>=2.10",
"numpy>=1.23",
"pandas==1.5.3",
"matplotlib==3.7.0",
"psutil==5.9.5"
]

[project.scripts]
codegreen = "codegreen.main:app"